# docs/swagger.json
@@ -11,7 +11,7 @@
                         "api_key": []
                     }
                 ],
-                "description": "Admin can Approve Campaign",
+                "description": "Admin can Approve Campaign after verifying it",
                 "consumes": [
                     "application/json"
                 ],
@@ -21,7 +21,7 @@
                 "tags": [
                     "Admin Campaign"
                 ],
-                "summary": "Admin can Approv Campaign",
+                "summary": "Approve Campaigns",
                 "parameters": [
                     {
                         "description": "Post ID ",
@@ -39,6 +39,18 @@
                         "schema": {
                             "$ref": "#/definitions/pb.ApproveCampaignResponse"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pb.ApproveCampaignResponse"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
+                        "schema": {
+                            "$ref": "#/definitions/pb.ApproveCampaignResponse"
+                        }
                     }
                 }
             }
@@ -50,7 +62,7 @@
                         "api_key": []
                     }
                 ],
-                "description": "Admin can get Campaign Details",
+                "description": "Admin can see Campaign Details",
                 "consumes": [
                     "application/json"
                 ],
@@ -60,19 +72,33 @@
                 "tags": [
                     "Admin Campaign"
                 ],
-                "summary": "Admin can get Campaign Details",
+                "summary": "Campaign Details",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "post id",
-                        "name": "id",
-                        "in": "query",
-                        "required": true
+                        "description": "Post ID ",
+                        "name": "CampaignDetailsBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/routes.CampaignDetailsBody"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pb.CampaignDetailsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pb.CampaignDetailsResponse"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
                         "schema": {
                             "$ref": "#/definitions/pb.CampaignDetailsResponse"
                         }
@@ -256,30 +282,33 @@
                 "tags": [
                     "Admin Campaign"
                 ],
-                "summary": "Admin can see campaign request",
+                "summary": "Campaign Requests",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "limit",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Page number",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "searchkey",
-                        "name": "searchkey",
-                        "in": "query"
+                        "description": "Page Details and Searchkey ",
+                        "name": "CampaignRequestListBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/routes.CampaignRequestListBody"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pb.CampaignRequestListResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pb.CampaignRequestListResponse"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
                         "schema": {
                             "$ref": "#/definitions/pb.CampaignRequestListResponse"
                         }
@@ -304,30 +333,33 @@
                 "tags": [
                     "Admin Categories"
                 ],
-                "summary": "Admin can see Categories",
+                "summary": "Categories",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "limit",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Page number",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "searchkey",
-                        "name": "searchkey",
-                        "in": "query"
+                        "description": "Page Details and Searchkey ",
+                        "name": "CategoryListBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/routes.CategoryListBody"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pb.CategoryListResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pb.CategoryListResponse"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
                         "schema": {
                             "$ref": "#/definitions/pb.CategoryListResponse"
                         }
@@ -355,27 +387,30 @@
                 "summary": "Admin can see Category posts",
                 "parameters": [
                     {
-                        "type": "string",
-                        "description": "limit",
-                        "name": "limit",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "Page number",
-                        "name": "page",
-                        "in": "query"
-                    },
-                    {
-                        "type": "string",
-                        "description": "searchkey",
-                        "name": "searchkey",
-                        "in": "query"
+                        "description": "Page Details and Category ID ",
+                        "name": "CategoryPostsBody",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/routes.CategoryPostsBody"
+                        }
                     }
                 ],
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pb.CategoryPostsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/pb.CategoryPostsResponse"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
                         "schema": {
                             "$ref": "#/definitions/pb.CategoryPostsResponse"
                         }
@@ -474,10 +509,16 @@
                 "tags": [
                     "Admin Dashboard"
                 ],
-                "summary": "Admin can see website statistics",
+                "summary": "Admin Dashboard",
                 "responses": {
                     "200": {
                         "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pb.AdminDashboardResponse"
+                        }
+                    },
+                    "502": {
+                        "description": "Bad Gateway",
                         "schema": {
                             "$ref": "#/definitions/pb.AdminDashboardResponse"
                         }
@@ -2597,6 +2638,70 @@
                 "postId": {
                     "type": "integer",
                     "maximum": 999
+                }
+            }
+        },
+        "routes.CampaignDetailsBody": {
+            "type": "object",
+            "required": [
+                "postId"
+            ],
+            "properties": {
+                "postId": {
+                    "type": "integer",
+                    "maximum": 999
+                }
+            }
+        },
+        "routes.CampaignRequestListBody": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer",
+                    "maximum": 99
+                },
+                "page": {
+                    "type": "integer",
+                    "maximum": 99
+                },
+                "searchkey": {
+                    "type": "string"
+                }
+            }
+        },
+        "routes.CategoryListBody": {
+            "type": "object",
+            "properties": {
+                "limit": {
+                    "type": "integer",
+                    "maximum": 99
+                },
+                "page": {
+                    "type": "integer",
+                    "maximum": 99
+                },
+                "searchkey": {
+                    "type": "string"
+                }
+            }
+        },
+        "routes.CategoryPostsBody": {
+            "type": "object",
+            "required": [
+                "categoryId"
+            ],
+            "properties": {
+                "categoryId": {
+                    "type": "integer",
+                    "maximum": 50
+                },
+                "limit": {
+                    "type": "integer",
+                    "maximum": 99
+                },
+                "page": {
+                    "type": "integer",
+                    "maximum": 99
                 }
             }
         },
