# pkg/admin/routes/AdminDashboard.go
@@ -2,7 +2,6 @@ package routes
 
 import (
 	"context"
-	"errors"
 	"hand/pkg/admin/pb"
 	"log"
 	"net/http"
@@ -12,13 +11,16 @@ import (
 
 // Admin Dashboard godoc
 //
-//	@Summary		Admin can see website statistics
+//	@Summary		Admin Dashboard
 //	@Description	Admin can see website statistics
 //	@Tags			Admin Dashboard
 //	@Security		api_key
 //	@Accept			json
 //	@Produce		json
 //	@Success		200	{object}	pb.AdminDashboardResponse
+//
+//	@Failure		502	{object}	pb.AdminDashboardResponse
+//
 //	@Router			/admin/dashboard  [get]
 func AdminDashboard(ctx *gin.Context, c pb.AdminServiceClient) {
 	log.Println("Initiating AdminDashboard...")
@@ -27,12 +29,12 @@ func AdminDashboard(ctx *gin.Context, c pb.AdminServiceClient) {
 	res, err := c.AdminDashboard(context.Background(), &pb.AdminDashboardRequest{})
 	if err != nil {
 		log.Println("Error occured while fetching data...", err)
-		ctx.JSON(http.StatusBadGateway, gin.H{
-			"status": http.StatusBadGateway,
-			"error":  errors.New("failed to fetch admin dashboard"),
+		ctx.JSON(http.StatusBadGateway, &pb.AdminDashboardResponse{
+			Status:   http.StatusBadGateway,
+			Response: "Error from internal server",
 		})
 		return
 	}
-	
+
 	ctx.JSON(http.StatusOK, &res)
 }
